--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
       <h3 class="mb-5">
         <em>the ones that count</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Let's Talk</a>
+      <a class="btn btn-warning btn-xl js-scroll-trigger" href="#services">Let's Talk</a>
     </div>
     <div class="overlay"></div>
   </header>
