--- a/index.html
+++ b/index.html
@@ -898,63 +898,60 @@
 
   <section class="callout cfgcolor2" id="tipage">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5 cfgcolor2">Tired? <small class="emotioncolor"> So am I...*yawn* Why though?</small>
-      </h2>
-      <form>
-        <div class="form-group advise2">
-          <div class="form-check" id="ti1">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
-              checked>
-            <label class="form-check-label" for="exampleRadios1">
-              I just felt like staying up late binging a book, watching shows and stuff.
-            </label>
-          </div>
-          <div class="form-check" id="ti2">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-            <label class="form-check-label" for="exampleRadios2">
-              I just couldn’t sleep...
-            </label>
-          </div>
-          <div class="form-check" id="ti3">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
-            <label class="form-check-label" for="exampleRadios3">
-              I had a lot of work to do so I had to stay up really late to finish.
-            </label>
-          </div>
-          <div class="container text-center cfgcolor2" id="titext1">
-            <label for="tiredText">Lol!! Taking a break and just relaxing every once and a while is great! Make sure to
-              get enough sleep though, as your brain needs some rest as well!</label>
-            <blockquote class="blockquote well">
-              <p class="mb-0 quote2 cfgcolor2">
-                "Your future depends on your dreams, so go to
-                sleep."
-              </p>
-              <footer class="blockquote-footer quote"><cite title="Source Title">Mesut Barazany</cite></footer>
-            </blockquote>
-            <label for="tiredText">Heres a quote to help you rest easy: "Your future depends on your dreams, so go to
-              sleep." – Mesut Barazany. </label>
-            <br><br><br><br>
-          </div>
-          <div class="container text-center" id="titext2">
-            <label for="tiredText">Maybe you could relate to some of these then?
-              https://everydaypower.com/insomnia-quotes/ </label>
-            <br><br><br><br>
-          </div>
-          <div class="container text-center" id="titext3">
-            <label for="tiredText">Oh no! Have you looked at the stressed button? Maybe consider speaking up if you
-              notice
-              a problem in your workplace or school? </label>
-            <label for="tiredText">Make sure to take some breaks along the way. Take a nap, drink some water, get some
-              snacks. "Almost everything will work again if you unplug it for a few minutes, i
-              ncluding you." </label>
-          </div>
-
-        </div>
-      </form>
-      <br><br><br><br>
-      <hr>
+    <h2 class="mx-auto mb-5 cfgcolor2">Tired? <small class="emotioncolor"> So am I...*yawn* Why though?</small>
+    </h2>
+    <form>
+    <div class="form-group advise2">
+    <div class="form-check" id="ti1">
+    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
+    checked>
+    <label class="form-check-label" for="exampleRadios1">
+    I just felt like staying up late binging a book, watching shows and stuff.
+    </label>
     </div>
-  </section>
+    <div class="form-check" id="ti2">
+    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+    <label class="form-check-label" for="exampleRadios2">
+    I just couldn’t sleep...
+    </label>
+    </div>
+    <div class="form-check" id="ti3">
+    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+    <label class="form-check-label" for="exampleRadios3">
+    I had a lot of work to do so I had to stay up really late to finish.
+    </label>
+    <br>
+    </div>
+    <div class="container text-center advice" id="titext1">
+    <label for="tiredText">Lol!! Taking a break and just relaxing every once and a while is great! Make sure to
+    get enough sleep though, as your brain needs some rest as well!</label>
+    <blockquote class="blockquote well">
+    <p class="mb-0 quote2 cfgcolor2">
+    "Your future depends on your dreams, so go to
+    sleep."
+    </p>
+    <footer class="blockquote-footer quote"><cite title="Source Title">Mesut Barazany</cite></footer>
+    </blockquote>
+    </div>
+    <div class="container text-center" id="titext2">
+    <label for="tiredText">Maybe you could relate to some of these then?
+    https://everydaypower.com/insomnia-quotes/ </label>
+    </div>
+    <div class="container text-center" id="titext3">
+    <label for="tiredText">Oh no! Have you looked at the stressed button? Maybe consider speaking up if you
+    notice
+    a problem in your workplace or school? </label>
+    <label for="tiredText advice font-weight-bold">Make sure to take some breaks along the way. Take a nap,
+    drink some water, get some
+    snacks. </label>
+    </div>
+   
+    </div>
+    </form>
+    <br><br><br><br>
+    <hr>
+    </div>
+    </section>
 
 
 
@@ -962,10 +959,11 @@
 
   <section class="callout afgcolor6" id="stpage">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Oh no! Stress is not good for you. Let's talk about it.</h2>
+      <h2 class="mx-auto mb-5 dfgcolor4">Oh no!<small class="emotioncolor">Let's try to cool down</small>
+      </h2>
       <form>
         <div class="form-group">
-          <label for="stressedText">You're feeling stressed...What’s wrong? Too much to do, or is something else?
+          <label for="stressedText" class="advise">You're feeling stressed...What’s wrong? Too much to do, or is something else?
             bothering you? </label>
           <div class="form-check">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
@@ -983,26 +981,30 @@
           </div>
         </div>
         <div class="container text-center" id="stext1">
-          <label for="stressedText">Oh No! Too much to do? Well, I for one have definitely faced that before. Tell me
+          <label for="stressedText" class="advice">Oh No! Too much to do? Well, I for one have definitely faced that before. Tell me
             what
             you have to do it. </label>
-          <input type="text" class="form-control" id="stressedText" placeholder="What do you have to do?">
-          <button type="button" class="btn btn-primary" id="stsh1">Share</button>
+          <input type="text" class="form-control advice" id="stressedText" placeholder="What do you have to do?">
+          <button type="button" class="btn btn-acolor6" id="stsh1">Share</button>
         </div>
         <div class="container text-center" id="stext2">
-          <label for="stressedText">Oh god, you're right, that does sound pretty stressful... I would suggest just
-            getting organized if you haven't done so already. Time management is key. Time = life; therefore, waste your
-            time and waste of your life, or master your time and master your life.</label>
+          <label for="stressedText" class="advice">Oh god, you're right, that does sound pretty stressful... I would suggest just
+            getting organized if you haven't done so already. </label>
         </div>
+        <blockquote class="blockquote well">
+          <p class="mb-0 quote2 afgcolor6">
+            "Time management is key. Time = life; therefore, waste your
+            time and waste of your life, or master your time and master your life."
+          </p>
+        </blockquote>
         <div class="container text-center" id="stext3">
-          <label for="stressedText">Something else. Hmmm... What's That?</label>
+          <label for="stressedText advice">Something else. Hmmm... What's That?</label>
           <input type="text" class="form-control" id="stressedText" placeholder="What's up?">
-          <button type="button" class="btn btn-primary" id="stsh2">Share</button>
+          <button type="button" class="btn btn-acolor6" id="stsh2">Share</button>
         </div>
         <div class="container text-center" id="stext4">
-          <label for="stressedText">Oh no..Thats not good. I hope you feel better soon, and i hope things get better!
-            Dont
-            give up though, learn from this and let it make you better.</label>
+          <label for="stressedText advice2 font-weight-bold">Oh no..Thats not good. I hope you feel better soon, and i hope things get better!
+            Dont give up though, learn from this and let it make you better.</label>
         </div>
       </form>
       <br><br><br><br>
@@ -1012,61 +1014,68 @@
 
   <section class="callout afgcolor7" id="anpage">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">You’re angry. Are you angry at a person? </h2>
+      <h2 class="mx-auto mb-5 dfgcolor4">Oh no!<small class="emotioncolor">Let's try to cool down</small>
+      </h2>
       <form>
         <div class="form-group">
           <div class="form-check" id="an1">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
               checked>
             <label class="form-check-label" for="exampleRadios1">
-              Yes
+              I'm mad at someone I love
             </label>
           </div>
           <div class="form-check" id="an2">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
             <label class="form-check-label" for="exampleRadios2">
-              No
+              I'm not mad at someone I love
             </label>
           </div>
 
-          <div class="container text-center" id="antext1">
-            <div class="form-check" id="an3">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
-                checked>
-              <label class="form-check-label" for="exampleRadios1">
-                I'm mad at someone I love
-              </label>
-            </div>
-            <div class="form-check" id="an4">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-              <label class="form-check-label" for="exampleRadios2">
-                I'm not mad at someone I love
-              </label>
-            </div>
-          </div>
+          <blockquote class="blockquote well">
+            <p class="mb-0 quote2 dfgcolor5">
+              "No matter how angry you get you will always end up forgiving those who you love"
+            </p>
+          </blockquote>
           <div class="container text-center" id="antext3">
-            <label for="angryText">"No matter how angry you get you will always end up forgiving those who you love".
+            <label for="angryText advice"></label>
               But it is important not to let that anger ruin your relationship with that person. </label>
           </div>
           <div class="container text-center" id="antext4">
-            <label for="angryText">"Getting angry is actually punishing yourself for the mistakes of others." Don’t let
+            <blockquote class="blockquote well">
+              <p class="mb-0 quote2 dfgcolor5">
+                "Getting angry is actually punishing yourself for the mistakes of others."
+              </p>
+            </blockquote>
+            <label for="angryText">Don’t let
               your anger at someone who doesn’t matter ruin your life. It is best to move on and not hold onto that
               anger. If you can’t do that, then try to talk about why you are angry. </label>
           </div>
           <br><br>
           <div class="container text-center" id="antext2">
             <label for="angryText">What are you angry at?</label>
+
             <input type="text" class="form-control" id="happyText" placeholder="what made you angry?">
+            <br><br>
             <label for="angryText">
-              <button type="button" class="btn btn-primary" id="ansh">Share</button>
-          </div>
-          <div class="container text-center" id="antext5">
+              <button type="button" class="btn dcolor3" id="ansh">Share</button>
+          <br>
+            </div>
+          <div class="container text-center advice1" id="antext5">
             Agh!! So unfair! Although, some looking at things from a different perspective can be helpful. Only once
-            you’re completely sure the other side is wrong, should you act upon your anger. "Anybody can become angry —
-            that is easy, but to be angry with the right person and to the right degree and at the right time and for
-            the right purpose, and in the right way — that is not within everybody's power and is not easy." -Aristotle
+            you’re completely sure the other side is wrong, should you act upon your anger. 
             Also, always remember, "Don’t waste your time in anger, regrets, worries, and grudges. Life is too short to
             be unhappy."</label>
+            
+          <blockquote class="blockquote well">
+            <p class="mb-0 quote2 dfgcolor5">
+              "Anybody can become angry —
+              that is easy, but to be angry with the right person and to the right degree and at the right time and for
+              the right purpose, and in the right way — that is not within everybody's power and is not easy."
+              <footer class="blockquote-footer quote"><cite title="Source Title">Aristotle</cite></footer>
+
+            </p>
+          </blockquote>
           </div>
         </div>
       </form>
@@ -1079,7 +1088,9 @@
 
   <section class="callout afgcolor8" id="scpage">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Ahhh!? What are you scared of? Are you in danger?</h2>
+      <h2 class="mx-auto mb-5 cfgcolor4">AHH!!<small class="emotioncolor">Let's try to chill.</small>
+      </h2>
+      <label for="scaredText"> Are you in danger?</label>
       <form>
         <div class="form-group">
           <div class="form-check" id="sc1">
@@ -1103,14 +1114,25 @@
             <label for="scaredText"> Will your fear prevent you from doing things that would benefit you? Share your
               fear</label>
             <input type="text" class="form-control" id="scaredText" placeholder="What are you scared of?">
-            <button type="button" class="btn btn-primary" id="scsh>Share</button>
-</div>
+            <br>
+            <button type="button" class="btn ccolor2" id="scsh">Share</button>
+            <br>
+            </button>
+            </div>
 <div class=" container text-center" id="sctext3">
-              <label for="scaredText">Yea that can be kind of scary. But when I am scared, I remember that "Fear is the
-                main source of superstition, and one of the main sources of cruelty. To conquer fear is the beginning of
-                wisdom." — Bertrand Russell. Once you conquer these negative fears, you’ll be able to achieve much more
+              <label for="scaredText">Yea that can be kind of scary. But when I am scared, I remember this:  Once you conquer these negative fears, you’ll be able to achieve much more
                 than you could’ve ever thought possible.
-          </div>
+                <br>
+                <blockquote class="blockquote well">
+                  <p class="mb-0 quote2 cfgcolor2">
+                    "Fear is the
+                main source of superstition, and one of the main sources of cruelty. To conquer fear is the beginning of
+                wisdom."
+                    <footer class="blockquote-footer quote"><cite title="Source Title">Bertrand Russell</cite></footer>
+      
+                  </p>
+                </blockquote>
+              </div>
           </label>
         </div>
       </form>
