--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@
           </div>
           <div class="container text-center" id="satext1">
             <input type="text" class="form-control" id="sadText" placeholder="What makes you sad?">
-            <button type="submit" class="btn btn-primary" id="sash">Share</button>
+            <button type="button" class="btn btn-primary" id="sash">Share</button>
           </div>
           <div class="container text-center" id="satext3">
             <label for="sadText">Oh No! I'm so sorry! I hope things get better for you! Just remember that you are not
@@ -1224,7 +1224,7 @@
           </div>
           <div class="container text-center" id="cotext1">
             <input type="text" class="form-control" id="confidentText" placeholder="Share here">
-            <button type="submit" class="btn btn-primary" id="cosh">Share</button>
+            <button type="button" class="btn btn-primary" id="cosh">Share</button>
           </div>
           <div class="container text-center" id="cotext3">
             <label for="confidentText">Cool!!!! Thats great, you should be proud. </label>
